fix export list datatable overflow-y.

--- a/frontend/app/export-list/export-list.component.scss
+++ b/frontend/app/export-list/export-list.component.scss
@@ -47,13 +47,8 @@ i.action {
 }
 
 ngx-datatable {
-  height: 50vh!important;
-  // position: absolute;
-  // right:0;
   left:5px;
-  // top:0;
-  // bottom:0;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .form-control-sm {
@@ -91,7 +86,7 @@ ngx-datatable {
 .card-padding {
   background-color: white;
   padding: 10px;
-  
+
 }
 
 .ngx-datatable.bootstrap {
@@ -152,8 +147,8 @@ ngx-datatable {
   max-height: 100%;
   overflow: auto;
   overflow-y: scroll;
-  height:auto; 
-  display: table; 
+  height:auto;
+  display: table;
 }
 
 #widthButton{
@@ -208,11 +203,11 @@ margin-left: 27%;
 }
 
 .ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948; 
+  border-left: 5px solid #42A948;
 }
 
 .ng-invalid[required], .ng-invalid.required  {
-  border-left: 5px solid rgb(184, 101, 101); 
+  border-left: 5px solid rgb(184, 101, 101);
 }
 
 .alert{
@@ -325,7 +320,7 @@ margin-left: 27%;
 }
 .select-items div:hover, .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
-} 
+}
 
 #rowApi{
   align-content: center;
